// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> AltinnFilterChip--- Snapshot +++ Should match snapshot with delete icon visible 1`] = `
<div
  className="MuiChip-root-4 MuiChip-colorPrimary-5 MuiChip-clickable-7 MuiChip-clickableColorPrimary-8 MuiChip-deletable-10 MuiChip-deletableColorPrimary-11 MuiChip-outlined-13 MuiChip-outlinedPrimary-14 AltinnFilterChip-chip-1"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <span
    className="MuiChip-label-23"
  >
    mock label
  </span>
  <i
    className="ai ai-delete MuiChip-deleteIcon-24 MuiChip-deleteIconOutlinedColorPrimary-27"
    onClick={[Function]}
  />
</div>
`;

exports[`>>> AltinnFilterChip--- Snapshot +++ Should match snapshot with sort icon visible 1`] = `
<div
  className="MuiChip-root-4 MuiChip-colorPrimary-5 MuiChip-clickable-7 MuiChip-clickableColorPrimary-8 MuiChip-deletable-10 MuiChip-deletableColorPrimary-11 MuiChip-outlined-13 MuiChip-outlinedPrimary-14 mock-class-name AltinnFilterChip-chip-1"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <span
    className="MuiChip-label-23"
  >
    mock label
  </span>
  <i
    className="AltinnFilterChip-down-3 MuiChip-deleteIcon-24 MuiChip-deleteIconOutlinedColorPrimary-27"
    onClick={[Function]}
  />
</div>
`;

exports[`>>> AltinnFilterChip--- Snapshot +++ Should match snapshot with the least amount of params 1`] = `
<div
  className="MuiChip-root-4 MuiChip-colorPrimary-5 MuiChip-clickable-7 MuiChip-clickableColorPrimary-8 MuiChip-outlined-13 MuiChip-outlinedPrimary-14 AltinnFilterChip-chip-1"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <span
    className="MuiChip-label-23"
  >
    mock label
  </span>
</div>
`;
